[package]
name = "weresocool_wavelet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audrey = "0.3.0"
fastcwt = "0.1.6"
hound = "3.5.0"
ndarray = "0.15.6"
num = "0.4.0"
rand = "0.8.5"
weresocool_ast = { path="../weresocool/ast", version = "^1.0.47" }
weresocool_instrument = { path="../weresocool/instrument", version = "^1.0.47" }
